<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menu_item1"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/app_name" />
        <item
            android:id="@+id/once_report"
            android:icon="@drawable/ic_event"
            android:title="@string/test_first" />
        <item
            android:id="@+id/continue_report"
            android:icon="@drawable/ic_event"
            android:title="@string/test_continue" />
        <item
            android:id="@+id/interval_report"
            android:icon="@drawable/ic_event"
            android:title="@string/test_frequency" />
    </group>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/go_settings"
        android:title="@string/settings" />
</menu>